[package]
name = "waterpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11.0", features = ["hjson", "json"] }
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.130", features = ["derive"] }
mcp3008 = "1.0.0"
sysfs_gpio = "0.6.1"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
failure = "0.1.8"
rand = "0.8.4"
# Metrics 
warp = "0.3.1"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
prometheus = "0.13.0"

# [dev-dependencies]
mockall = "0.10.2"
